--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -100,6 +101,7 @@ flutter:
     - assets/
     - assets/svgs/
     - assets/images/
+    - assets/background/
     - lib/languageJson/
     - lib/languageJson/en.json
     - lib/languageJson/fr.json
