--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,10 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
   flutter:
     sdk: flutter
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -72,7 +71,6 @@ dependencies:
   bip32: ^2.0.0
 
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -83,9 +81,23 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/Trust.png"
+
+flutter_native_splash:
+  image: assets/images/launch_image.png  # Đặt đường dẫn đến ảnh splash của bạn
+  color: "#ffffff"
+  android: true
+  ios: true
+  web: true  # Nếu muốn hỗ trợ web
 
 # The following section is specific to Flutter packages.
 flutter:
