--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   hex: ^0.2.0
   provider: ^6.1.4
   bip32: ^2.0.0
-
+  syncfusion_flutter_charts: ^29.1.35
 
 dev_dependencies:
   flutter_test:
